# yolov8_realsense_rg2_ws

./: README.md  newest version  package.xml  setup.py  yolov8_realsense_node.py
